banner, video e descricao

--- a/index.html
+++ b/index.html
@@ -27,5 +27,23 @@
             </ul>
         </nav>
     </header>
+
+    <div id="banner"></div>
+
+    <div id="trailer-container">
+        <div class="content">
+            <video controls class="trailer" src="./media/BATMAN  _ Trailer 2 Oficial Legendado _ DC FanDome 2021.mp4" type="video/mp4">
+                Seu navegador não possui suporte para o vídeo
+            </video>
+            <div id="sinopse">
+                <p class="description">
+                    Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas 
+                    mais sombrias de Gotham City. Com poucos aliados confiáveis, o vigilante solitário se estabelece 
+                    como a personificação da vingança para a população.
+                </p>
+                <button class="button">Comprar ingresso</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
