--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
     <div id="banner"></div>
 
     <div id="trailer-container">
+
         <div class="content">
+
             <video controls class="trailer" src="./media/BATMAN  _ Trailer 2 Oficial Legendado _ DC FanDome 2021.mp4" type="video/mp4">
                 Seu navegador não possui suporte para o vídeo
             </video>
+
             <div id="sinopse">
                 <p class="description">
                     Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas 
@@ -44,6 +47,16 @@
                 <button class="button">Comprar ingresso</button>
             </div>
         </div>
+    </div>
+
+    <div class="actor-cards-container">
+
+        <div class="cards-content">
+            <div class="card banner-1">Robert Pattison - Batman</div> <!-- criado duas classes diferentes card e banner-1 -->
+            <div class="card banner-2">Zoe Kravitz - Mulher gato</div>
+            <div class="card banner-3">Jeffrey Wright - Gordon</div>
+        </div>
+
     </div>
 </body>
 </html>
