aula 5 add footer e media query

--- a/index.html
+++ b/index.html
@@ -58,5 +58,27 @@
         </div>
 
     </div>
+
+    <footer>
+        <img style="object-fit: contain;" id="logo" src="./media/LFB.jpg" >
+        <span>Todos os direitos reservado ©</span>
+        <span>Desenvolvido por: Matheus Garcia</span>
+        <nav class="footer-navigation">
+            <ul class="footer-list">
+                <a href="./index.html">
+                    <li>Home</li>
+                </a>
+                <a href="./contato.html">
+                    <li>Contato</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>Fotos</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>Comentários</li>
+                </a>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
