add css a pagina contato

--- a/contato.html
+++ b/contato.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contato</title>
+    <link rel="stylesheet" href="contato.css">
+    <link rel="shortcut icon" href="./media/Batman.ico" type="image/x-icon">
 </head>
 <body>
-    Contato
+    <header>
+        <img id="logo" src="./media/LFB.jpg" >
+        <nav>
+            <ul>
+                <a href="./index.html">
+                    <li>Home</li>
+                </a>
+                <a href="./contato.html">
+                    <li>Contato</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>Fotos</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>Comentários</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="caixa-container">
+
+        <div class="caixa">
+
+            <h2 class="titulo">Contate-nos</h2>
+
+            <form class="formulario" action="contato.html">
+                    
+                <input class="inputs" type="text" name="nome" placeholder="Seu nome">
+
+                <input class="inputs" type="email" name="email" placeholder="Seu email" >
+
+                <input class="inputs" type="text" name="titulo" placeholder="Assunto">
+
+                <textarea class="inputs" name="mensagem" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+
+                <button class="button">Enviar</button>
+            
+            </form>
+
+        </div>
+
+    </div>
+
+    <footer>
+        <img style="object-fit: contain;" id="logo" src="./media/LFB.jpg" >
+        <span>Todos os direitos reservado ©</span>
+        <span>Desenvolvido por: Matheus Garcia</span>
+        <nav class="footer-navigation">
+            <ul class="footer-list">
+                <a href="./index.html">
+                    <li>Home</li>
+                </a>
+                <a href="./contato.html">
+                    <li>Contato</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>Fotos</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>Comentários</li>
+                </a>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
