add css a pagina fotos

--- a/fotos.html
+++ b/fotos.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fotos</title>
+    <link rel="stylesheet" href="fotos.css">
+    <link rel="shortcut icon" href="./media/Batman.ico" type="image/x-icon">
 </head>
 <body>
-    Fotos
+    <header>
+        <img id="logo" src="./media/LFB.jpg" >
+        <nav>
+            <ul>
+                <a href="./index.html">
+                    <li>Home</li>
+                </a>
+                <a href="./contato.html">
+                    <li>Contato</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>Fotos</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>Comentários</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+    
+    <div class="titulo"><h2>Galeria</h2></div>
+
+    <div class="caixa-fotos">
+        <div class="fotos" id="foto1"></div>
+        <div class="fotos" id="foto2"></div>
+        <div class="fotos" id="foto3"></div>
+        <div class="fotos" id="foto4"></div>
+        <div class="fotos" id="foto5"></div>
+        <div class="fotos" id="foto6"></div>
+        <div class="fotos" id="foto7"></div>
+        <div class="fotos" id="foto8"></div>
+        <div class="fotos" id="foto9"></div>
+    </div>
+
+    <footer>
+        <img style="object-fit: contain;" id="logo" src="./media/LFB.jpg" >
+        <span>Todos os direitos reservado ©</span>
+        <span>Desenvolvido por: Matheus Garcia</span>
+        <nav class="footer-navigation">
+            <ul class="footer-list">
+                <a href="./index.html">
+                    <li>Home</li>
+                </a>
+                <a href="./contato.html">
+                    <li>Contato</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>Fotos</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>Comentários</li>
+                </a>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
