--- a/fotos.html
+++ b/fotos.html
@@ -46,7 +46,9 @@
     <footer>
         <img style="object-fit: contain;" id="logo" src="./media/LFB.jpg" >
         <span>Todos os direitos reservado ©</span>
-        <span>Desenvolvido por: Matheus Garcia</span>
+        <a href="https://www.instagram.com/theuz_gsantos/">
+            <span>Desenvolvido por: Matheus Garcia</span>
+        </a>
         <nav class="footer-navigation">
             <ul class="footer-list">
                 <a href="./index.html">
