--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingressos Batman</title>
+    <title>The Batman</title>
     <link rel="shortcut icon" href="./media/Batman.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -45,7 +45,9 @@
                     mais sombrias de Gotham City. Com poucos aliados confiáveis, o vigilante solitário se estabelece 
                     como a personificação da vingança para a população.
                 </p>
-                <button class="button">Comprar ingresso</button>
+                <a href="https://play.hbomax.com/page/urn:hbo:page:GYiDbSAmIpMNvYAEAAAAI:type:feature?source=googleHBOMAX&action=play">
+                    <button class="button" >Assistir no HBO Max</button>
+                </a>
             </div>
         </div>
     </div>
@@ -53,9 +55,15 @@
     <div class="actor-cards-container">
 
         <div class="cards-content">
-            <div class="card banner-1">Robert Pattison - Batman</div> <!-- criado duas classes diferentes card e banner-1 -->
-            <div class="card banner-2">Zoe Kravitz - Mulher gato</div>
-            <div class="card banner-3">Jeffrey Wright - Gordon</div>
+            <a href="https://pt.wikipedia.org/wiki/Robert_Pattinson">
+                <div class="card banner-1">Robert Pattison - Batman</div> <!-- criado duas classes diferentes card e banner-1 -->
+            </a>
+            <a href="https://pt.wikipedia.org/wiki/Zoë_Kravitz">
+                <div class="card banner-2">Zoe Kravitz - Mulher gato</div>
+            </a>
+            <a href="https://pt.wikipedia.org/wiki/Jeffrey_Wright">
+                <div class="card banner-3">Jeffrey Wright - Gordon</div>
+            </a>
         </div>
 
     </div>
@@ -63,7 +71,9 @@
     <footer>
         <img style="object-fit: contain;" id="logo" src="./media/LFB.jpg" >
         <span>Todos os direitos reservado ©</span>
-        <span>Desenvolvido por: Matheus Garcia</span>
+        <a href="https://www.instagram.com/theuz_gsantos/">
+            <span>Desenvolvido por: Matheus Garcia</span>
+        </a>
         <nav class="footer-navigation">
             <ul class="footer-list">
                 <a href="./index.html">
